[tool.poetry]
name = "python-mf-data"
version = "0.1.0"
description = ""
authors = ["Neon K.I.D <contact@neonkid.xyz>"]
packages = [
    { include = "common", from = "lib" },
    { include = "sql", from = "lib" },
    { include = "mongodb", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.8"
motor = {version = "2.5.1", optional = true}
SQLAlchemy = {version = "1.4.22", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.extras]
mongodb = ["motor"]
sql = ["SQLAlchemy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
