[tool.poetry]
name = "python-mf-data"
version = "0.1.2"
description = ""
authors = ["Neon K.I.D <contact@neonkid.xyz>"]
packages = [
    { include = "pymfdata" }
]

[tool.poetry.dependencies]
python = "^3.8"
motor = {version = "2.5.1", optional = true}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.28", optional = true}
alembic = {version = "^1.7.1", optional = true}

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"

[tool.poetry.extras]
mongodb = ["motor"]
rdb = ["alembic", "SQLAlchemy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
