[tool.poetry]
name = "python-mf-data"
version = "0.2.6"
description = "Python Micro Framework Data"
authors = ["Neon K.I.D <contact@neonkid.xyz>"]
packages = [
    { include = "pymfdata" }
]
repository = "https://github.com/NEONKID/python-mf-data"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.8"
motor = {version = "2.5.1", optional = true}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.28", optional = true}
alembic = {version = "^1.7.5", optional = true}
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.17.2"
pydantic = {extras = ["email"], version = "^1.9.0"}
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
black = "^22.1.0"

[tool.poetry.extras]
mongodb = ["motor"]
rdb = ["alembic", "SQLAlchemy"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
